# yuanziapp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PROJECT_PLAN.md  README.md  atom-registry-schema.json  pyproject.toml  start_hermes_termux.sh  start_yuanzi_termux.sh  yuanzi-config.yaml
.ai-agents/: HANDOFF.md  WAKEUP.md  agent_architect_role.md  agent_audit_role.md  agent_engineer_role.md  agent_fixer_role.md  agent_hub_role.md  chat.py  config.py  scheduler.py  watchdog.py
atoms/: README.md
base-atoms/: README.md
design-doc-review/: 00-总览.md  01-基座设计.md  02-原子规格.md  03-图谱引擎.md  04-阶段设计.md  05-终端.md  06-质量治理.md  07-感知原子层.md  08-原子分类v2.md  09-体验场景.md  10-工作流容错.md  11-AI意图原子.md
docs/: ADR_ATOM_MODEL.md  APK_BUILD_GUIDE.md  ARCHITECTURE_ASSESSMENT.md  ARCHITECTURE_LAYERS.md  ARCHITECTURE_OVERVIEW.md  ATOM_CONNECTION_RULES.md  ATOM_SENSOR_LAYER.md  ATOM_SOUL_MODEL.md  ATOM_VISIBILITY_MODEL.md  BASE_ATOMS_SPEC.md  BUG_REGISTRY.md  CHAIN_ATOM_INTEGRATION.md  CHAIN_BACKUP_GITHUB.md  CHANNEL_MODEL.md  CLEANUP_PLAN.md  DESIGN_AI_BRAIN.md  DESIGN_AI_INTENT_ATOM.md  DESIGN_APK_ARCHITECTURE.md  DESIGN_APK_SPEC.md  DESIGN_ATOM_CATALOG.md  DESIGN_ATOM_CLASSIFICATION.md  DESIGN_ATOM_FOUNDATION.md  DESIGN_ATOM_FOUNDATION_V2.md  DESIGN_ATOM_GRAVITY.md  (+64 more)
yuanzi-cli/: README.md  pyproject.toml
yuanzi-cli/tests/: test_atom_init.py  test_init.py  test_install_hooks.py  test_validate.py
yuanzi-cli/yuanzi_cli/: __init__.py  atom_templates.py  main.py  meta.py  templates.py
yuanzi-cli/yuanzi_cli/commands/: atom.py  init.py  install_hooks.py  test.py  validate.py
(+383 files in other folders)
