[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yuanzi-cli"
version = "0.1.0"
description = "CLI for the Yuanzi atom ecosystem"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "yuanziapp" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "cookiecutter>=2.6.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-subprocess>=0.5",
]

[project.scripts]
yuanzi = "yuanzi_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["yuanzi_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
